WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137798
OSObjectPtr is missing leakRef()
https://bugs.webkit.org/show_bug.cgi?id=137798
Summary
OSObjectPtr is missing leakRef()
mitz
Reported
2014-10-16 17:13:34 PDT
OSObjectPtr is missing leakRef()
Attachments
Add OSObjectPtr::leakRef
(2.30 KB, patch)
2014-10-16 17:14 PDT
,
mitz
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-10-16 17:14:48 PDT
Created
attachment 239985
[details]
Add OSObjectPtr::leakRef
WebKit Commit Bot
Comment 2
2014-10-16 17:16:28 PDT
Attachment 239985
[details]
did not pass style-queue: ERROR: Source/WTF/wtf/OSObjectPtr.h:145: This { should be at the end of the previous line [whitespace/braces] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 3
2014-10-16 22:14:42 PDT
Committed <
http://trac.webkit.org/r174809
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug