OSObjectPtr is missing leakRef() https://bugs.webkit.org/show_bug.cgi?id=137798

Reviewed by Sam Weinig.

Source/WTF:

* wtf/OSObjectPtr.h:

Tools:

* TestWebKitAPI/Tests/WTF/darwin/OSObjectPtr.cpp:
(TestWebKitAPI::TEST(OSObjectPtr, LeakRef)): Added.



Canonical link: https://commits.webkit.org/155667@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174809 268f45cc-cd09-0410-ab3c-d52691b4dbfc